making sure i had acp'd previous changes

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ ul {
 hr {
   margin-top: 20px;
   height: 8px;
-  background: repeating-linear-gradient (45deg gray 1px);
+  /*background: repeating-linear-gradient (45deg gray 1px);*/
   background-color: gray;
 }
 
